--- a/SaillenWebProOriginal/src/index.html
+++ b/SaillenWebProOriginal/src/index.html
@@ -10,14 +10,13 @@
 </head>
 
 <body>
-    
     <h1 id="manosALaObra">Manos a la obra!</h1>
     </div id="alinearPlanetas">
     <div id="postgree">
         <button id="createOrderButton">Crear orden de trabajo</button>
         <section id="searchSection">
             <h2>Buscar Ficha</h2>
-            <input type="text" id="fichaInput" placeholder="Ingrese la ficha...">
+            <input type="text" id="fichaInput" placeholder="Ingrese una ficha">
             <input type="text" id="medidasInput" placeholder="Buscar por medidas" style="display: none;">
             <input type="date" id="fechaInput" name="fechaInput">
             <input type="text" id="clientesTo" placeholder="Cliente">
@@ -124,14 +123,11 @@
             <button id="backNewFichaButton">Volver</button>
         </section>
     </div>
-    <div class="deletedFichas">
             <button id="borrarFichas">Borrar fichas</button>
             <div style="display: none;" id="mostrarPseudo">
-                <input type="number" id="fichaInput" placeholder="Digite una ficha.">
+                <input type="number" id="fichaInputToDelete" placeholder="Digite una ficha.">
                 <button id="selectedKey">Borrar!</button>
             </div>
-        </div>
     <script src="scripts.js"></script>
 </body>
-
 </html>
