Terminar el boton de eliminar fichas

--- a/SaillenWebProOriginal/src/srcs/index.html
+++ b/SaillenWebProOriginal/src/srcs/index.html
@@ -73,14 +73,13 @@
                 <label for="ancho">Ancho:</label>
                 <input type="text" id="ancho" name="ancho"><br><br>
                 <button id="ifEscotes">Tiene escotes?</button>
-                <input type="text" id="diametroRecorte" name="diametroRecorte" placeholder="Diametro de recorte"
-                    style="display: none;">
                 <input type="text" id="escote1" name="escote1" style="display: none;" placeholder="Escote 1">
                 <button id="buttonAddEscote" style="display: none;">+?</button>
                 <input type="text" id="escote2" name="escote2" style="display: none;" placeholder="Escote 2">
                 <p id="txtOpaccity">Este texto es para separar no le des bola, proximo programador (si es que existes)
                 </p>
-                <br><br>
+                <input type="text" id="diametroRecorte" name="diametroRecorte" placeholder="Diametro de recorte"
+                    style="display: none;"><br><br>
                 <button id="ifPesoRecorte">Tiene recorte?</button>
                 <input type="text" id="pesoRecorte" placeholder="Peso recorte" style="display: none;">
                 <p id="textCalle">texto separador Nuevamente xddddd</p>
