--- a/SaillenWebProOriginal/src/interfaces.html
+++ b/SaillenWebProOriginal/src/interfaces.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Saillen</title>
-    <link rel="website icon" type="png" href="templates/iconoSaillen.png">
+    <link rel="website icon" type="png" href="nuevo_icon.SVG.png">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
